Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 </div>
 
                 <div class="mt-12 text-right">
-                    <p class="fancy-font text-3xl text-pink-400">Forever Yours,</p>
-                    <p class="handwriting text-2xl text-gray-500 mt-2"> [ Your Name ] </p>
+                    <p class="fancy-font text-3xl text-pink-400">Forever Yours, (peksman maded man)</p>
+                    <p class="handwriting text-2xl text-gray-500 mt-2"> krez </p>
                 </div>
 
             </div>
