Modify title and content in index.html
Updated the title and some text content in the HTML.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="mt-10 mb-12 text-center relative">
             <span class="absolute -top-6 -left-6 text-4xl">✨</span>
             <div class="bg-white/90 px-10 py-4 rounded-full border border-pink-200 shadow-sm">
-                <h1 class="fancy-font text-6xl text-pink-500">Our Memories</h1>
+                <h1 class="fancy-font text-6xl text-pink-500">A little trip to our adventure ror</h1>
             </div>
             <span class="absolute -bottom-6 -right-6 text-4xl">✨</span>
         </div>
@@ -109,3 +109,4 @@
 </body>
 
 </html>
+
