--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div
             class="bg-white/80 p-8 rounded-3xl shadow-lg text-center max-w-sm w-full border-4 border-pink-100 backdrop-blur-md">
             <div class="text-4xl mb-4">🎀</div>
-            <h1 class="fancy-font text-5xl text-pink-400 mb-2">Love Meter</h1>
-            <p class="text-gray-400 text-sm tracking-widest uppercase mb-8">Tap heart to enter</p>
+            <h1 class="fancy-font text-5xl text-pink-400 mb-2">I love u bebe</h1>
+            <p class="text-gray-400 text-sm tracking-widest uppercase mb-8">Tap heart kung crush mo ako</p>
 
             <div onclick="clickHeart()" class="pulse-heart text-8xl mb-8 select-none drop-shadow-md">💖</div>
 
@@ -46,11 +46,11 @@
             <span class="absolute -bottom-6 -right-6 text-4xl">✨</span>
         </div>
 
-        <div class="bg-white p-6 rounded-xl shadow-sm border border-pink-100 text-center mb-16 transform rotate-1">
+        <!-- <div class="bg-white p-6 rounded-xl shadow-sm border border-pink-100 text-center mb-16 transform rotate-1">
             <div class="absolute -top-3 left-1/2 -translate-x-1/2 w-24 h-6 bg-pink-200/50 rotate-[-2deg]"></div>
             <p class="text-xs uppercase tracking-widest text-pink-300">Time Together</p>
             <div id="uptime-display" class="text-2xl font-bold text-gray-600 mt-2">Loading...</div>
-        </div>
+        </div> !-->
 
         <div id="loading-msg" class="text-xl text-pink-400 handwriting animate-pulse">
             Fetching our memories from the cloud... ☁️
@@ -71,19 +71,22 @@
                     💌
                 </div>
 
-                <h2 class="fancy-font text-4xl md:text-5xl text-pink-500 mb-8">My baby Rhein...</h2>
+                <h2 class="fancy-font text-4xl md:text-5xl text-pink-500 mb-8">To my baby, my baby baby Rhein 😝 </h2>
 
                 <div class="handwriting text-2xl text-gray-600 leading-loose space-y-6">
                     <!--i need to finish this later--> 
                     <p>
                         Happy Anniversary my baby :(( HUHUHU ang bilis, parang dati lang crush mo ako tapos ngayon +1 ka na sa bahay namin.
-                        I am so happy that after all this time, you chose me. 
+                        I'm so so so happy we made it this far, I'm surprised na isang taon at mahigit mong nakayanan ang 
+                        kulit at pang-iinis ko HAHWHHAHAHAHA mahal na mahal kita :))
                     </p>
                     <p>
-                       I thank all the stars everyday for 
+                       Ang daming nangyari, ang daming memory, ang daming story, iyakan, at kilig kasi alam kong crush na crush mo ako 🙉🙉 
+                        Medyo malungkot lang ako kasi hindi tayo magkasama ngayon at wala ka sa tabi ko kaya dapat ikiss mo ako ng 
+                        sobrang dami pag-uwi mo sa akin heuheuheu
                     </p>
                     <p>
-                        I love you more than words (or code) can explain.
+                        I love you more than words I can explain.
                     </p>
                 </div>
 
@@ -109,4 +112,5 @@
 </body>
 
 </html>
+
 
