--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <span class="absolute -bottom-6 -right-6 text-4xl">✨</span>
         </div>
 
-        <!-- <div class="bg-white p-6 rounded-xl shadow-sm border border-pink-100 text-center mb-16 transform rotate-1">
+        <div class="bg-white p-6 rounded-xl shadow-sm border border-pink-100 text-center mb-16 transform rotate-1">
             <div class="absolute -top-3 left-1/2 -translate-x-1/2 w-24 h-6 bg-pink-200/50 rotate-[-2deg]"></div>
             <p class="text-xs uppercase tracking-widest text-pink-300">Time Together</p>
             <div id="uptime-display" class="text-2xl font-bold text-gray-600 mt-2">Loading...</div>
-        </div> !-->
+        </div> 
 
         <div id="loading-msg" class="text-xl text-pink-400 handwriting animate-pulse">
             Fetching our memories from the cloud... ☁️
@@ -112,5 +112,6 @@
 </body>
 
 </html>
+
 
 
