Revise index.html for anniversary celebration
Updated the HTML structure and content for the anniversary message.

--- a/index.html
+++ b/index.html
@@ -81,12 +81,16 @@
                         kulit at pang-iinis ko HAHWHHAHAHAHA mahal na mahal kita :))
                     </p>
                     <p>
-                       Ang daming nangyari, ang daming memory, ang daming story, iyakan, at kilig kasi alam kong crush na crush mo ako 🙉🙉 
+                        Ang daming nangyari, ang daming memory, ang daming story, iyakan, at kilig kasi alam kong crush na crush mo ako 🙉🙉 
                         Medyo malungkot lang ako kasi hindi tayo magkasama ngayon at wala ka sa tabi ko kaya dapat ikiss mo ako ng 
                         sobrang dami pag-uwi mo sa akin heuheuheu
                     </p>
                     <p>
-                        I love you more than words I can explain.
+                        Hindi ko man alam kung ano ang mangyayari sa susunod na araw, linggo, buwan, at taon—alam ko naman na kahit saan man tayo 
+                        dalhin ng panahon, ikaw at ikaw lang ang mamahalin ko.
+                    </p>
+                    <p> 
+                        I can't wait to celebrate our 2nd or even 10th anniversary with you. I love you so much, Rhein.
                     </p>
                 </div>
 
@@ -112,6 +116,7 @@
 </body>
 
 </html>
+
 
 
 
