--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="bg-white p-6 rounded-xl shadow-sm border border-pink-100 text-center mb-16 transform rotate-1">
             <div class="absolute -top-3 left-1/2 -translate-x-1/2 w-24 h-6 bg-pink-200/50 rotate-[-2deg]"></div>
-            <p class="text-xs uppercase tracking-widest text-pink-300">Time Together</p>
+            <!-- <p class="text-xs uppercase tracking-widest text-pink-300">Time Together</p> !-->
             <div id="uptime-display" class="text-2xl font-bold text-gray-600 mt-2">Loading...</div>
         </div> 
 
@@ -116,6 +116,7 @@
 </body>
 
 </html>
+
 
 
 
